k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketboard
  labels:
    name: ticketboard
